# image-compare

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  rust.yml
src/: colorization.rs  histogram.rs  hybrid.rs  lib.rs  main.rs  squared_error.rs  ssim.rs  utils.rs
tests/: compare.rs
tests/features/: compare.feature  histogram_gray.feature  hybrid_rgb.feature  hybrid_rgba.feature  structure_gray.feature  structure_rgb.feature
