[package]
name = "image-compare"
version = "0.2.0-RC1"
edition = "2021"
authors = ["Christopher Regali <christopher.regali@vdop.org>"]
license = "MIT"
repository = "https://github.com/ChrisRega/image-compare"
homepage = "https://github.com/ChrisRega/image-compare"
documentation = "https://docs.rs/image-compare"
readme = "README.md"
categories = ["multimedia::images"]
exclude = ["tests/data/*", ".github"]
description = "Image comparison library based upon the image crate. Currently it provides SSIM and RMS for comparing grayscale images with a friendly license."

[dependencies]
thiserror = "1.0"
image = "0.24"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.13"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "compare"
harness = false
