[package]
name = "image-compare"
version = "0.3.0-RC1"
edition = "2021"
authors = ["Christopher Regali <christopher.regali@vdop.org>"]
license = "MIT"
repository = "https://github.com/ChrisRega/image-compare"
homepage = "https://github.com/ChrisRega/image-compare"
documentation = "https://docs.rs/image-compare"
readme = "README.md"
categories = ["multimedia::images"]
exclude = ["tests/data/*", ".github"]
description = "Image comparison library based upon the image crate. Currently it provides SSIM and RMS for comparing grayscale and rgb images, a cool hybrid compare as well as several grayscale histogram distance metrics. All with a friendly license."

[dependencies]
thiserror = "1.0"
image = "0.24"
rayon = "1.7"
itertools = "0.10"

[dev-dependencies]
cucumber = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "compare"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true